tests/test_assets/semantic/invalid/definite_assignment/nested_function_capture.cog
capture_without_inner_slots::() -> i32 {
    outer_value: i32 = 10;

    inner::() -> i32 {
        return outer_value;
    }

    return outer_value;
}

capture_with_colliding_parameter::() -> i32 {
    outer_value: i32;

    inner::(dummy: i32) -> i32 {
        return outer_value;
    }

    return 0;
}

capture_outer_parameter::(outer_value: i32) -> i32 {
    inner::() -> i32 {
        return outer_value;
    }

    return 0;
}

write_outer_local::() -> i32 {
    outer_value: i32;

    inner::() -> i32 {
        outer_value = 10;
        return 0;
    }

    return 0;
}
